frontend/src/widgets/table/grammar/generated/FilterQueryParser.ts
// eslint-disable-next-line @typescript-eslint/ban-ts-comment
// @ts-nocheck
/* eslint-disable */
import * as antlr from 'antlr4ng';

import { FilterQueryListener } from './FilterQueryListener.js';
import { FilterQueryVisitor } from './FilterQueryVisitor.js';

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI

type int = number;

export class FilterQueryParser extends antlr.Parser {
  public static readonly T__0 = 1;
  public static readonly T__1 = 2;
  public static readonly T__2 = 3;
  public static readonly AND = 4;
  public static readonly OR = 5;
  public static readonly NOT = 6;
  public static readonly IN = 7;
  public static readonly IS = 8;
  public static readonly CONTAINS = 9;
  public static readonly STARTS_WITH = 10;
  public static readonly ENDS_WITH = 11;
  public static readonly EQUALS = 12;
  public static readonly NOT_EQUALS = 13;
  public static readonly GREATER_THAN = 14;
  public static readonly GREATER_THAN_EQUALS = 15;
  public static readonly LESS_THAN = 16;
  public static readonly LESS_THAN_EQUALS = 17;
  public static readonly BOOLEAN_LITERAL = 18;
  public static readonly NULL_LITERAL = 19;
  public static readonly STRING_LITERAL = 20;
  public static readonly NUMBER_LITERAL = 21;
  public static readonly IDENTIFIER = 22;
  public static readonly QUOTED_IDENTIFIER = 23;
  public static readonly WS = 24;
  public static readonly RULE_query = 0;
  public static readonly RULE_expression = 1;
  public static readonly RULE_condition = 2;
  public static readonly RULE_columnName = 3;
  public static readonly RULE_value = 4;
  public static readonly RULE_valueList = 5;

  public static readonly literalNames = [
    null,
    "'('",
    "')'",
    "','",
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    "'>'",
    "'>='",
    "'<'",
    "'<='",
  ];

  public static readonly symbolicNames = [
    null,
    null,
    null,
    null,
    'AND',
    'OR',
    'NOT',
    'IN',
    'IS',
    'CONTAINS',
    'STARTS_WITH',
    'ENDS_WITH',
    'EQUALS',
    'NOT_EQUALS',
    'GREATER_THAN',
    'GREATER_THAN_EQUALS',
    'LESS_THAN',
    'LESS_THAN_EQUALS',
    'BOOLEAN_LITERAL',
    'NULL_LITERAL',
    'STRING_LITERAL',
    'NUMBER_LITERAL',
    'IDENTIFIER',
    'QUOTED_IDENTIFIER',
    'WS',
  ];
  public static readonly ruleNames = [
    'query',
    'expression',
    'condition',
    'columnName',
    'value',
    'valueList',
  ];

  public get grammarFileName(): string {
    return 'FilterQuery.g4';
  }
  public get literalNames(): (string | null)[] {
    return FilterQueryParser.literalNames;
  }
  public get symbolicNames(): (string | null)[] {
    return FilterQueryParser.symbolicNames;
  }
  public get ruleNames(): string[] {
    return FilterQueryParser.ruleNames;
  }
  public get serializedATN(): number[] {
    return FilterQueryParser._serializedATN;
  }

  protected createFailedPredicateException(
    predicate?: string,
    message?: string
  ): antlr.FailedPredicateException {
    return new antlr.FailedPredicateException(this, predicate, message);
  }

  public constructor(input: antlr.TokenStream) {
    super(input);
    this.interpreter = new antlr.ParserATNSimulator(
      this,
      FilterQueryParser._ATN,
      FilterQueryParser.decisionsToDFA,
      new antlr.PredictionContextCache()
    );
  }
  public query(): QueryContext {
    let localContext = new QueryContext(this.context, this.state);
    this.enterRule(localContext, 0, FilterQueryParser.RULE_query);
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 12;
        this.expression(0);
        this.state = 13;
        this.match(FilterQueryParser.EOF);
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }

  public expression(): ExpressionContext;
  public expression(_p: number): ExpressionContext;
  public expression(_p?: number): ExpressionContext {
    if (_p === undefined) {
      _p = 0;
    }

    let parentContext = this.context;
    let parentState = this.state;
    let localContext = new ExpressionContext(this.context, parentState);
    let previousContext = localContext;
    let _startState = 2;
    this.enterRecursionRule(
      localContext,
      2,
      FilterQueryParser.RULE_expression,
      _p
    );
    try {
      let alternative: number;
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 23;
        this.errorHandler.sync(this);
        switch (this.tokenStream.LA(1)) {
          case FilterQueryParser.T__0:
            {
              localContext = new ParenExpressionContext(localContext);
              this.context = localContext;
              previousContext = localContext;

              this.state = 16;
              this.match(FilterQueryParser.T__0);
              this.state = 17;
              this.expression(0);
              this.state = 18;
              this.match(FilterQueryParser.T__1);
            }
            break;
          case FilterQueryParser.NOT:
            {
              localContext = new NotExpressionContext(localContext);
              this.context = localContext;
              previousContext = localContext;
              this.state = 20;
              this.match(FilterQueryParser.NOT);
              this.state = 21;
              this.expression(4);
            }
            break;
          case FilterQueryParser.IDENTIFIER:
          case FilterQueryParser.QUOTED_IDENTIFIER:
            {
              localContext = new ConditionExpressionContext(localContext);
              this.context = localContext;
              previousContext = localContext;
              this.state = 22;
              this.condition();
            }
            break;
          default:
            throw new antlr.NoViableAltException(this);
        }
        this.context!.stop = this.tokenStream.LT(-1);
        this.state = 33;
        this.errorHandler.sync(this);
        alternative = this.interpreter.adaptivePredict(
          this.tokenStream,
          2,
          this.context
        );
        while (
          alternative !== 2 &&
          alternative !== antlr.ATN.INVALID_ALT_NUMBER
        ) {
          if (alternative === 1) {
            if (this.parseListeners != null) {
              this.triggerExitRuleEvent();
            }
            previousContext = localContext;
            {
              this.state = 31;
              this.errorHandler.sync(this);
              switch (
                this.interpreter.adaptivePredict(
                  this.tokenStream,
                  1,
                  this.context
                )
              ) {
                case 1:
                  {
                    localContext = new AndExpressionContext(
                      new ExpressionContext(parentContext, parentState)
                    );
                    this.pushNewRecursionContext(
                      localContext,
                      _startState,
                      FilterQueryParser.RULE_expression
                    );
                    this.state = 25;
                    if (!this.precpred(this.context, 3)) {
                      throw this.createFailedPredicateException(
                        'this.precpred(this.context, 3)'
                      );
                    }
                    this.state = 26;
                    this.match(FilterQueryParser.AND);
                    this.state = 27;
                    this.expression(4);
                  }
                  break;
                case 2:
                  {
                    localContext = new OrExpressionContext(
                      new ExpressionContext(parentContext, parentState)
                    );
                    this.pushNewRecursionContext(
                      localContext,
                      _startState,
                      FilterQueryParser.RULE_expression
                    );
                    this.state = 28;
                    if (!this.precpred(this.context, 2)) {
                      throw this.createFailedPredicateException(
                        'this.precpred(this.context, 2)'
                      );
                    }
                    this.state = 29;
                    this.match(FilterQueryParser.OR);
                    this.state = 30;
                    this.expression(3);
                  }
                  break;
              }
            }
          }
          this.state = 35;
          this.errorHandler.sync(this);
          alternative = this.interpreter.adaptivePredict(
            this.tokenStream,
            2,
            this.context
          );
        }
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.unrollRecursionContexts(parentContext);
    }
    return localContext;
  }
  public condition(): ConditionContext {
    let localContext = new ConditionContext(this.context, this.state);
    this.enterRule(localContext, 4, FilterQueryParser.RULE_condition);
    try {
      this.state = 94;
      this.errorHandler.sync(this);
      switch (
        this.interpreter.adaptivePredict(this.tokenStream, 3, this.context)
      ) {
        case 1:
          localContext = new EqualsConditionContext(localContext);
          this.enterOuterAlt(localContext, 1);
          {
            this.state = 36;
            this.columnName();
            this.state = 37;
            this.match(FilterQueryParser.EQUALS);
            this.state = 38;
            this.value();
          }
          break;
        case 2:
          localContext = new NotEqualsConditionContext(localContext);
          this.enterOuterAlt(localContext, 2);
          {
            this.state = 40;
            this.columnName();
            this.state = 41;
            this.match(FilterQueryParser.NOT_EQUALS);
            this.state = 42;
            this.value();
          }
          break;
        case 3:
          localContext = new GreaterThanConditionContext(localContext);
          this.enterOuterAlt(localContext, 3);
          {
            this.state = 44;
            this.columnName();
            this.state = 45;
            this.match(FilterQueryParser.GREATER_THAN);
            this.state = 46;
            this.value();
          }
          break;
        case 4:
          localContext = new GreaterThanEqualsConditionContext(localContext);
          this.enterOuterAlt(localContext, 4);
          {
            this.state = 48;
            this.columnName();
            this.state = 49;
            this.match(FilterQueryParser.GREATER_THAN_EQUALS);
            this.state = 50;
            this.value();
          }
          break;
        case 5:
          localContext = new LessThanConditionContext(localContext);
          this.enterOuterAlt(localContext, 5);
          {
            this.state = 52;
            this.columnName();
            this.state = 53;
            this.match(FilterQueryParser.LESS_THAN);
            this.state = 54;
            this.value();
          }
          break;
        case 6:
          localContext = new LessThanEqualsConditionContext(localContext);
          this.enterOuterAlt(localContext, 6);
          {
            this.state = 56;
            this.columnName();
            this.state = 57;
            this.match(FilterQueryParser.LESS_THAN_EQUALS);
            this.state = 58;
            this.value();
          }
          break;
        case 7:
          localContext = new ContainsConditionContext(localContext);
          this.enterOuterAlt(localContext, 7);
          {
            this.state = 60;
            this.columnName();
            this.state = 61;
            this.match(FilterQueryParser.CONTAINS);
            this.state = 62;
            this.value();
          }
          break;
        case 8:
          localContext = new StartsWithConditionContext(localContext);
          this.enterOuterAlt(localContext, 8);
          {
            this.state = 64;
            this.columnName();
            this.state = 65;
            this.match(FilterQueryParser.STARTS_WITH);
            this.state = 66;
            this.value();
          }
          break;
        case 9:
          localContext = new EndsWithConditionContext(localContext);
          this.enterOuterAlt(localContext, 9);
          {
            this.state = 68;
            this.columnName();
            this.state = 69;
            this.match(FilterQueryParser.ENDS_WITH);
            this.state = 70;
            this.value();
          }
          break;
        case 10:
          localContext = new InConditionContext(localContext);
          this.enterOuterAlt(localContext, 10);
          {
            this.state = 72;
            this.columnName();
            this.state = 73;
            this.match(FilterQueryParser.IN);
            this.state = 74;
            this.match(FilterQueryParser.T__0);
            this.state = 75;
            this.valueList();
            this.state = 76;
            this.match(FilterQueryParser.T__1);
          }
          break;
        case 11:
          localContext = new NotInConditionContext(localContext);
          this.enterOuterAlt(localContext, 11);
          {
            this.state = 78;
            this.columnName();
            this.state = 79;
            this.match(FilterQueryParser.NOT);
            this.state = 80;
            this.match(FilterQueryParser.IN);
            this.state = 81;
            this.match(FilterQueryParser.T__0);
            this.state = 82;
            this.valueList();
            this.state = 83;
            this.match(FilterQueryParser.T__1);
          }
          break;
        case 12:
          localContext = new IsNullConditionContext(localContext);
          this.enterOuterAlt(localContext, 12);
          {
            this.state = 85;
            this.columnName();
            this.state = 86;
            this.match(FilterQueryParser.IS);
            this.state = 87;
            this.match(FilterQueryParser.NULL_LITERAL);
          }
          break;
        case 13:
          localContext = new IsNotNullConditionContext(localContext);
          this.enterOuterAlt(localContext, 13);
          {
            this.state = 89;
            this.columnName();
            this.state = 90;
            this.match(FilterQueryParser.IS);
            this.state = 91;
            this.match(FilterQueryParser.NOT);
            this.state = 92;
            this.match(FilterQueryParser.NULL_LITERAL);
          }
          break;
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public columnName(): ColumnNameContext {
    let localContext = new ColumnNameContext(this.context, this.state);
    this.enterRule(localContext, 6, FilterQueryParser.RULE_columnName);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 96;
        _la = this.tokenStream.LA(1);
        if (!(_la === 22 || _la === 23)) {
          this.errorHandler.recoverInline(this);
        } else {
          this.errorHandler.reportMatch(this);
          this.consume();
        }
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public value(): ValueContext {
    let localContext = new ValueContext(this.context, this.state);
    this.enterRule(localContext, 8, FilterQueryParser.RULE_value);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 98;
        _la = this.tokenStream.LA(1);
        if (!((_la & ~0x1f) === 0 && ((1 << _la) & 3932160) !== 0)) {
          this.errorHandler.recoverInline(this);
        } else {
          this.errorHandler.reportMatch(this);
          this.consume();
        }
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public valueList(): ValueListContext {
    let localContext = new ValueListContext(this.context, this.state);
    this.enterRule(localContext, 10, FilterQueryParser.RULE_valueList);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 100;
        this.value();
        this.state = 105;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        while (_la === 3) {
          {
            {
              this.state = 101;
              this.match(FilterQueryParser.T__2);
              this.state = 102;
              this.value();
            }
          }
          this.state = 107;
          this.errorHandler.sync(this);
          _la = this.tokenStream.LA(1);
        }
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }

  public override sempred(
    localContext: antlr.ParserRuleContext | null,
    ruleIndex: number,
    predIndex: number
  ): boolean {
    switch (ruleIndex) {
      case 1:
        return this.expression_sempred(
          localContext as ExpressionContext,
          predIndex
        );
    }
    return true;
  }
  private expression_sempred(
    localContext: ExpressionContext | null,
    predIndex: number
  ): boolean {
    switch (predIndex) {
      case 0:
        return this.precpred(this.context, 3);
      case 1:
        return this.precpred(this.context, 2);
    }
    return true;
  }


  private static __ATN: antlr.ATN;
  public static get _ATN(): antlr.ATN {
    if (!FilterQueryParser.__ATN) {
      FilterQueryParser.__ATN = new antlr.ATNDeserializer().deserialize(
        FilterQueryParser._serializedATN
      );
    }

    return FilterQueryParser.__ATN;
  }

  private static readonly vocabulary = new antlr.Vocabulary(
    FilterQueryParser.literalNames,
    FilterQueryParser.symbolicNames,
    []
  );

  public override get vocabulary(): antlr.Vocabulary {
    return FilterQueryParser.vocabulary;
  }

  private static readonly decisionsToDFA =
    FilterQueryParser._ATN.decisionToState.map(
      (ds: antlr.DecisionState, index: number) => new antlr.DFA(ds, index)
    );
}

export class QueryContext extends antlr.ParserRuleContext {
  public constructor(
    parent: antlr.ParserRuleContext | null,
    invokingState: number
  ) {
    super(parent, invokingState);
  }
  public expression(): ExpressionContext {
    return this.getRuleContext(0, ExpressionContext)!;
  }
  public EOF(): antlr.TerminalNode {
    return this.getToken(FilterQueryParser.EOF, 0)!;
  }
  public override get ruleIndex(): number {
    return FilterQueryParser.RULE_query;
  }
  public override enterRule(listener: FilterQueryListener): void {
    if (listener.enterQuery) {
      listener.enterQuery(this);
    }
  }
  public override exitRule(listener: FilterQueryListener): void {
    if (listener.exitQuery) {
      listener.exitQuery(this);
    }
  }
  public override accept<Result>(
    visitor: FilterQueryVisitor<Result>
  ): Result | null {
    if (visitor.visitQuery) {
      return visitor.visitQuery(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}

export class ExpressionContext extends antlr.ParserRuleContext {
  public constructor(
    parent: antlr.ParserRuleContext | null,
    invokingState: number
  ) {
    super(parent, invokingState);
  }
  public override get ruleIndex(): number {
    return FilterQueryParser.RULE_expression;
  }
  public override copyFrom(ctx: ExpressionContext): void {
    super.copyFrom(ctx);
  }
}
export class ParenExpressionContext extends ExpressionContext {
  public constructor(ctx: ExpressionContext) {
    super(ctx.parent, ctx.invokingState);
    super.copyFrom(ctx);
  }
  public expression(): ExpressionContext {
    return this.getRuleContext(0, ExpressionContext)!;
  }
  public override enterRule(listener: FilterQueryListener): void {
    if (listener.enterParenExpression) {
      listener.enterParenExpression(this);
    }
  }
  public override exitRule(listener: FilterQueryListener): void {
    if (listener.exitParenExpression) {
      listener.exitParenExpression(this);
    }
  }
  public override accept<Result>(
    visitor: FilterQueryVisitor<Result>
  ): Result | null {
    if (visitor.visitParenExpression) {
      return visitor.visitParenExpression(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}
export class NotExpressionContext extends ExpressionContext {
  public constructor(ctx: ExpressionContext) {
    super(ctx.parent, ctx.invokingState);
    super.copyFrom(ctx);
  }
  public NOT(): antlr.TerminalNode {
    return this.getToken(FilterQueryParser.NOT, 0)!;
  }
  public expression(): ExpressionContext {
    return this.getRuleContext(0, ExpressionContext)!;
  }
  public override enterRule(listener: FilterQueryListener): void {
    if (listener.enterNotExpression) {
      listener.enterNotExpression(this);
    }
  }
  public override exitRule(listener: FilterQueryListener): void {
    if (listener.exitNotExpression) {
      listener.exitNotExpression(this);
    }
  }
  public override accept<Result>(
    visitor: FilterQueryVisitor<Result>
  ): Result | null {
    if (visitor.visitNotExpression) {
      return visitor.visitNotExpression(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}
export class ConditionExpressionContext extends ExpressionContext {
  public constructor(ctx: ExpressionContext) {
    super(ctx.parent, ctx.invokingState);
    super.copyFrom(ctx);
  }
  public condition(): ConditionContext {
    return this.getRuleContext(0, ConditionContext)!;
  }
  public override enterRule(listener: FilterQueryListener): void {
    if (listener.enterConditionExpression) {
      listener.enterConditionExpression(this);
    }
  }
  public override exitRule(listener: FilterQueryListener): void {
    if (listener.exitConditionExpression) {
      listener.exitConditionExpression(this);
    }
  }
  public override accept<Result>(
    visitor: FilterQueryVisitor<Result>
  ): Result | null {
    if (visitor.visitConditionExpression) {
      return visitor.visitConditionExpression(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}
export class AndExpressionContext extends ExpressionContext {
  public constructor(ctx: ExpressionContext) {
    super(ctx.parent, ctx.invokingState);
    super.copyFrom(ctx);
  }
  public expression(): ExpressionContext[];
  public expression(i: number): ExpressionContext | null;
  public expression(
    i?: number
  ): ExpressionContext[] | ExpressionContext | null {
    if (i === undefined) {
      return this.getRuleContexts(ExpressionContext);
    }

    return this.getRuleContext(i, ExpressionContext);
  }
  public AND(): antlr.TerminalNode {
    return this.getToken(FilterQueryParser.AND, 0)!;
  }
  public override enterRule(listener: FilterQueryListener): void {
    if (listener.enterAndExpression) {
      listener.enterAndExpression(this);
    }
  }
  public override exitRule(listener: FilterQueryListener): void {
    if (listener.exitAndExpression) {
      listener.exitAndExpression(this);
    }
  }
  public override accept<Result>(
    visitor: FilterQueryVisitor<Result>
  ): Result | null {
    if (visitor.visitAndExpression) {
      return visitor.visitAndExpression(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}
export class OrExpressionContext extends ExpressionContext {
  public constructor(ctx: ExpressionContext) {
    super(ctx.parent, ctx.invokingState);
    super.copyFrom(ctx);
  }
  public expression(): ExpressionContext[];
  public expression(i: number): ExpressionContext | null;
  public expression(
    i?: number
  ): ExpressionContext[] | ExpressionContext | null {
    if (i === undefined) {
      return this.getRuleContexts(ExpressionContext);
    }

    return this.getRuleContext(i, ExpressionContext);
  }
  public OR(): antlr.TerminalNode {
    return this.getToken(FilterQueryParser.OR, 0)!;
  }
  public override enterRule(listener: FilterQueryListener): void {
    if (listener.enterOrExpression) {
      listener.enterOrExpression(this);
    }
  }
  public override exitRule(listener: FilterQueryListener): void {
    if (listener.exitOrExpression) {
      listener.exitOrExpression(this);
    }
  }
  public override accept<Result>(
    visitor: FilterQueryVisitor<Result>
  ): Result | null {
    if (visitor.visitOrExpression) {
      return visitor.visitOrExpression(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}

export class ConditionContext extends antlr.ParserRuleContext {
  public constructor(
    parent: antlr.ParserRuleContext | null,
    invokingState: number
  ) {
    super(parent, invokingState);
  }
  public override get ruleIndex(): number {
    return FilterQueryParser.RULE_condition;
  }
  public override copyFrom(ctx: ConditionContext): void {
    super.copyFrom(ctx);
  }
}
export class EqualsConditionContext extends ConditionContext {
  public constructor(ctx: ConditionContext) {
    super(ctx.parent, ctx.invokingState);
    super.copyFrom(ctx);
  }
  public columnName(): ColumnNameContext {
    return this.getRuleContext(0, ColumnNameContext)!;
  }
  public EQUALS(): antlr.TerminalNode {
    return this.getToken(FilterQueryParser.EQUALS, 0)!;
  }
  public value(): ValueContext {
    return this.getRuleContext(0, ValueContext)!;
  }
  public override enterRule(listener: FilterQueryListener): void {
    if (listener.enterEqualsCondition) {
      listener.enterEqualsCondition(this);
    }
  }
  public override exitRule(listener: FilterQueryListener): void {
    if (listener.exitEqualsCondition) {
      listener.exitEqualsCondition(this);
    }
  }
  public override accept<Result>(
    visitor: FilterQueryVisitor<Result>
  ): Result | null {
    if (visitor.visitEqualsCondition) {
      return visitor.visitEqualsCondition(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}
export class NotEqualsConditionContext extends ConditionContext {
  public constructor(ctx: ConditionContext) {
    super(ctx.parent, ctx.invokingState);
    super.copyFrom(ctx);
  }
  public columnName(): ColumnNameContext {
    return this.getRuleContext(0, ColumnNameContext)!;
  }
  public NOT_EQUALS(): antlr.TerminalNode {
    return this.getToken(FilterQueryParser.NOT_EQUALS, 0)!;
  }
  public value(): ValueContext {
    return this.getRuleContext(0, ValueContext)!;
  }
  public override enterRule(listener: FilterQueryListener): void {
    if (listener.enterNotEqualsCondition) {
      listener.enterNotEqualsCondition(this);
    }
  }
  public override exitRule(listener: FilterQueryListener): void {
    if (listener.exitNotEqualsCondition) {
      listener.exitNotEqualsCondition(this);
    }
  }
  public override accept<Result>(
    visitor: FilterQueryVisitor<Result>
  ): Result | null {
    if (visitor.visitNotEqualsCondition) {
      return visitor.visitNotEqualsCondition(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}
export class GreaterThanConditionContext extends ConditionContext {
  public constructor(ctx: ConditionContext) {
    super(ctx.parent, ctx.invokingState);
    super.copyFrom(ctx);
  }
  public columnName(): ColumnNameContext {
    return this.getRuleContext(0, ColumnNameContext)!;
  }
  public GREATER_THAN(): antlr.TerminalNode {
    return this.getToken(FilterQueryParser.GREATER_THAN, 0)!;
  }
  public value(): ValueContext {
    return this.getRuleContext(0, ValueContext)!;
  }
  public override enterRule(listener: FilterQueryListener): void {
    if (listener.enterGreaterThanCondition) {
      listener.enterGreaterThanCondition(this);
    }
  }
  public override exitRule(listener: FilterQueryListener): void {
    if (listener.exitGreaterThanCondition) {
      listener.exitGreaterThanCondition(this);
    }
  }
  public override accept<Result>(
    visitor: FilterQueryVisitor<Result>
  ): Result | null {
    if (visitor.visitGreaterThanCondition) {
      return visitor.visitGreaterThanCondition(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}
export class GreaterThanEqualsConditionContext extends ConditionContext {
  public constructor(ctx: ConditionContext) {
    super(ctx.parent, ctx.invokingState);
    super.copyFrom(ctx);
  }
  public columnName(): ColumnNameContext {
    return this.getRuleContext(0, ColumnNameContext)!;
  }
  public GREATER_THAN_EQUALS(): antlr.TerminalNode {
    return this.getToken(FilterQueryParser.GREATER_THAN_EQUALS, 0)!;
  }
  public value(): ValueContext {
    return this.getRuleContext(0, ValueContext)!;
  }
  public override enterRule(listener: FilterQueryListener): void {
    if (listener.enterGreaterThanEqualsCondition) {
      listener.enterGreaterThanEqualsCondition(this);
    }
  }
  public override exitRule(listener: FilterQueryListener): void {
    if (listener.exitGreaterThanEqualsCondition) {
      listener.exitGreaterThanEqualsCondition(this);
    }
  }
  public override accept<Result>(
    visitor: FilterQueryVisitor<Result>
  ): Result | null {
    if (visitor.visitGreaterThanEqualsCondition) {
      return visitor.visitGreaterThanEqualsCondition(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}
export class LessThanConditionContext extends ConditionContext {
  public constructor(ctx: ConditionContext) {
    super(ctx.parent, ctx.invokingState);
    super.copyFrom(ctx);
  }
  public columnName(): ColumnNameContext {
    return this.getRuleContext(0, ColumnNameContext)!;
  }
  public LESS_THAN(): antlr.TerminalNode {
    return this.getToken(FilterQueryParser.LESS_THAN, 0)!;
  }
  public value(): ValueContext {
    return this.getRuleContext(0, ValueContext)!;
  }
  public override enterRule(listener: FilterQueryListener): void {
    if (listener.enterLessThanCondition) {
      listener.enterLessThanCondition(this);
    }
  }
  public override exitRule(listener: FilterQueryListener): void {
    if (listener.exitLessThanCondition) {
      listener.exitLessThanCondition(this);
    }
  }
  public override accept<Result>(
    visitor: FilterQueryVisitor<Result>
  ): Result | null {
    if (visitor.visitLessThanCondition) {
      return visitor.visitLessThanCondition(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}
export class LessThanEqualsConditionContext extends ConditionContext {
  public constructor(ctx: ConditionContext) {
    super(ctx.parent, ctx.invokingState);
    super.copyFrom(ctx);
  }
  public columnName(): ColumnNameContext {
    return this.getRuleContext(0, ColumnNameContext)!;
  }
  public LESS_THAN_EQUALS(): antlr.TerminalNode {
    return this.getToken(FilterQueryParser.LESS_THAN_EQUALS, 0)!;
  }
  public value(): ValueContext {
    return this.getRuleContext(0, ValueContext)!;
  }
  public override enterRule(listener: FilterQueryListener): void {
    if (listener.enterLessThanEqualsCondition) {
      listener.enterLessThanEqualsCondition(this);
    }
  }
  public override exitRule(listener: FilterQueryListener): void {
    if (listener.exitLessThanEqualsCondition) {
      listener.exitLessThanEqualsCondition(this);
    }
  }
  public override accept<Result>(
    visitor: FilterQueryVisitor<Result>
  ): Result | null {
    if (visitor.visitLessThanEqualsCondition) {
      return visitor.visitLessThanEqualsCondition(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}
export class ContainsConditionContext extends ConditionContext {
  public constructor(ctx: ConditionContext) {
    super(ctx.parent, ctx.invokingState);
    super.copyFrom(ctx);
  }
  public columnName(): ColumnNameContext {
    return this.getRuleContext(0, ColumnNameContext)!;
  }
  public CONTAINS(): antlr.TerminalNode {
    return this.getToken(FilterQueryParser.CONTAINS, 0)!;
  }
  public value(): ValueContext {
    return this.getRuleContext(0, ValueContext)!;
  }
  public override enterRule(listener: FilterQueryListener): void {
    if (listener.enterContainsCondition) {
      listener.enterContainsCondition(this);
    }
  }
  public override exitRule(listener: FilterQueryListener): void {
    if (listener.exitContainsCondition) {
      listener.exitContainsCondition(this);
    }
  }
  public override accept<Result>(
    visitor: FilterQueryVisitor<Result>
  ): Result | null {
    if (visitor.visitContainsCondition) {
      return visitor.visitContainsCondition(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}
export class StartsWithConditionContext extends ConditionContext {
  public constructor(ctx: ConditionContext) {
